cmake_minimum_required(VERSION 3.21)
project(WTIAU_Prof_Gholamy_DS_011_306)

set(CMAKE_CXX_STANDARD 14)

add_executable(C1Q1 Chapter1/Q1.cpp)
add_executable(C1Q2 Chapter1/Q2.cpp)
add_executable(C1Q3 Chapter1/Q3.cpp)
add_executable(C1Q6 Chapter1/Q6.cpp)
add_executable(C1Q7 Chapter1/Q7.cpp)
add_executable(C1Q8 Chapter1/Q8.cpp)
add_executable(C1Q9 Chapter1/Q9.cpp)
add_executable(C1Q10 Chapter1/Q10.cpp)
add_executable(C1Q11 Chapter1/Q11.cpp)
add_executable(C1Q14 Chapter1/Q14.cpp)
add_executable(C1Q15 Chapter1/Q15.cpp)
add_executable(C1Q16 Chapter1/Q16.cpp)



